--- a/index.html
+++ b/index.html
@@ -1,5 +1,3 @@
-
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -57,7 +55,6 @@
     <h1>Dropbox Token Generator</h1>
     <h3 style="color: rgb(134, 20, 20);"># add url redirect to app https://www.dropbox.com/oauth2/authorize
     </h3>
-    
     <p>Enter your Dropbox App Key and App Secret to generate the authorization link.</p>
 
     <form id="authForm">
@@ -73,6 +70,7 @@
     <div id="authLink" style="display: none;">
         <h2>Authorization Link:</h2>
         <a id="authUrl" target="_blank">Click here to authorize</a>
+        <p>After authorizing, return to this page with the authorization code.</p>
     </div>
 
     <div id="result" style="display: none;">
