--- a/index.html
+++ b/index.html
@@ -3,134 +3,84 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dropbox Token Generator</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 20px;
-        }
-        form {
-            margin-bottom: 20px;
-        }
-        label {
-            display: block;
-            margin-bottom: 5px;
-            font-weight: bold;
-        }
-        input {
-            width: 300px;
-            padding: 8px;
-            margin-bottom: 10px;
-            border: 1px solid #ccc;
-            border-radius: 4px;
-        }
-        button {
-            padding: 10px 20px;
-            background-color: #007bff;
-            color: white;
-            border: none;
-            border-radius: 4px;
-            cursor: pointer;
-        }
-        button:hover {
-            background-color: #0056b3;
-        }
-        #authLink {
-            margin-top: 20px;
-            padding: 10px;
-            background-color: #f0f0f0;
-            border: 1px solid #ccc;
-            border-radius: 4px;
-        }
-        #result {
-            margin-top: 20px;
-            padding: 10px;
-            background-color: #f0f0f0;
-            border: 1px solid #ccc;
-            border-radius: 4px;
-        }
-    </style>
+    <title>Dropbox OAuth2 Example</title>
 </head>
 <body>
-    <h1>Dropbox Token Generator</h1>
-    <h3 style="color: rgb(134, 20, 20);"># add url redirect to app https://www.dropbox.com/oauth2/authorize
-    </h3>
-    <p>Enter your Dropbox App Key and App Secret to generate the authorization link.</p>
+    <h1>Dropbox OAuth2 Example</h1>
 
-    <form id="authForm">
-        <label for="appKey">App Key:</label>
-        <input type="text" id="appKey" name="appKey" placeholder="Enter your App Key" required>
+    <!-- Input fields for APP_KEY and APP_SECRET -->
+    <label for="appKey">App Key:</label>
+    <input type="text" id="appKey" placeholder="Enter your App Key"><br><br>
 
-        <label for="appSecret">App Secret:</label>
-        <input type="text" id="appSecret" name="appSecret" placeholder="Enter your App Secret" required>
+    <label for="appSecret">App Secret:</label>
+    <input type="text" id="appSecret" placeholder="Enter your App Secret"><br><br>
 
-        <button type="submit">Generate Authorization Link</button>
-    </form>
+    <!-- Button to start authorization -->
+    <button id="authorizeButton">Authorize Dropbox</button>
 
-    <div id="authLink" style="display: none;">
-        <h2>Authorization Link:</h2>
-        <a id="authUrl" target="_blank">Click here to authorize</a>
-        <p>After authorizing, return to this page with the authorization code.</p>
-    </div>
-
-    <div id="result" style="display: none;">
-        <h2>Tokens:</h2>
-        <p><strong>Access Token:</strong> <span id="accessToken"></span></p>
-        <p><strong>Refresh Token:</strong> <span id="refreshToken"></span></p>
-        <p><strong>User ID:</strong> <span id="userId"></span></p>
-    </div>
+    <!-- Output area for tokens -->
+    <div id="output"></div>
 
     <script>
-        document.getElementById('authForm').addEventListener('submit', function (event) {
-            event.preventDefault();
+        document.getElementById('authorizeButton').addEventListener('click', function() {
+            // Get user input for APP_KEY and APP_SECRET
+            const APP_KEY = document.getElementById('appKey').value;
+            const APP_SECRET = document.getElementById('appSecret').value;
 
-            // Get user input
-            const appKey = document.getElementById('appKey').value;
-            const appSecret = document.getElementById('appSecret').value;
+            // Default REDIRECT_URI
+            const REDIRECT_URI = 'https://www.dropbox.com/oauth2/authorize';
 
-            // Generate the authorization URL
-            const redirectUri = window.location.href; // Current page URL
-            const authUrl = `https://www.dropbox.com/oauth2/authorize?client_id=${appKey}&response_type=code&redirect_uri=${redirectUri}&token_access_type=offline`;
+            if (!APP_KEY || !APP_SECRET) {
+                alert("Please enter both App Key and App Secret.");
+                return;
+            }
 
-            // Display the authorization link
-            document.getElementById('authUrl').href = authUrl;
-            document.getElementById('authUrl').textContent = authUrl;
-            document.getElementById('authLink').style.display = 'block';
+            // Step 1: Redirect the user to the Dropbox authorization page
+            const authUrl = `https://www.dropbox.com/oauth2/authorize?client_id=${APP_KEY}&response_type=code&redirect_uri=${REDIRECT_URI}&token_access_type=offline`;
+            window.location.href = authUrl;
         });
 
-        // Check for the authorization code in the URL
+        // Step 2: Handle the callback after the user authorizes the app
         const urlParams = new URLSearchParams(window.location.search);
         const authCode = urlParams.get('code');
 
         if (authCode) {
-            const appKey = document.getElementById('appKey').value;
-            const appSecret = document.getElementById('appSecret').value;
+            // Get user input for APP_KEY and APP_SECRET again (since the page reloads after redirect)
+            const APP_KEY = document.getElementById('appKey').value;
+            const APP_SECRET = document.getElementById('appSecret').value;
 
-            // Exchange the authorization code for tokens
+            if (!APP_KEY || !APP_SECRET) {
+                alert("Please enter both App Key and App Secret.");
+                return;
+            }
+
+            // Step 3: Exchange the authorization code for an access token and refresh token
             fetch('https://api.dropboxapi.com/oauth2/token', {
                 method: 'POST',
                 headers: {
                     'Content-Type': 'application/x-www-form-urlencoded',
                 },
                 body: new URLSearchParams({
-                    code: authCode,
-                    grant_type: 'authorization_code',
-                    client_id: appKey,
-                    client_secret: appSecret,
-                    redirect_uri: window.location.href,
+                    'code': authCode,
+                    'grant_type': 'authorization_code',
+                    'client_id': APP_KEY,
+                    'client_secret': APP_SECRET,
+                    'redirect_uri': 'https://www.dropbox.com/oauth2/authorize', // Use the same redirect URI
                 }),
             })
             .then(response => response.json())
             .then(data => {
-                // Display the tokens
-                document.getElementById('accessToken').textContent = data.access_token;
-                document.getElementById('refreshToken').textContent = data.refresh_token;
-                document.getElementById('userId').textContent = data.account_id;
-                document.getElementById('result').style.display = 'block';
+                const outputDiv = document.getElementById('output');
+                outputDiv.innerHTML = `
+                    <p>Access Token: ${data.access_token}</p>
+                    <p>Refresh Token: ${data.refresh_token}</p>
+                    <p>User ID: ${data.uid}</p>
+                `;
             })
             .catch(error => {
-                document.getElementById('result').innerHTML = `<p>Error: ${error.message}</p>`;
-                document.getElementById('result').style.display = 'block';
+                console.error('Error:', error);
+                const outputDiv = document.getElementById('output');
+                outputDiv.innerHTML = `<p>Error: ${error.message}</p>`;
             });
         }
     </script>
